--- a/Code_run.ipynb
+++ b/Code_run.ipynb
@@ -1,7 +1,12 @@
 {
   "nbformat": 4,
   "nbformat_minor": 5,
-  "metadata": {},
+  "metadata": {
+    "selected_hardware_size": "small",
+    "noteable": {
+      "last_transaction_id": "c550202c-dc4f-4430-82dd-5def08dd0b0f"
+    }
+  },
   "cells": [
     {
       "id": "330fbc89",
